# gnome-voice

./: ChangeLog  GEOLOCATION  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  configure  configure.ac  gnome-voice.spec  gnome-voice.spec.in  gnome-voice.xml  gnome-voice.xml.in
data/: Makefile.am  Makefile.in  gnome-voice.appdata.xml.in  gnome-voice.desktop  gnome-voice.desktop.in.in
data/icons/: Makefile.am  Makefile.in
po/: POTFILES.in  POTFILES.skip  da.po
src/: Makefile.am  Makefile.in  gnome-voice-file.c  gnome-voice-file.h  gnome-voice-main.c  gnome-voice-main.h  gnome-voice-stream.c  gnome-voice-stream.h  gnome-voice-vosc.c  gnome-voice-vosc.h
