bin_PROGRAMS = gnome-voice

gnome_voice_SOURCES = gnome-voice-file.c gnome-voice-file.h gnome-voice-main.c gnome-voice-vosc.c gnome-voice-vosc.h

AM_CPPFLAGS = $(GNOME_VOICE_CFLAGS)
AM_CFLAGS = $(GNOME_VOICE_CFLAGS)

gnome_voice_CFLAGS = $(GNOME_VOICE_CFLAGS)
gnome_voice_LDADD = $(GNOME_VOICE_LIBS)

LDADD = $(GNOME_VOICE_LIBS)
